# mcp-todoist

./: .env.example  .gitignore  .mcpbignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  manifest.json  mpak.json  pyproject.toml  server.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: new-server.md
.github/workflows/: build-bundle.yml  ci.yml  scan.yml
src/mcp_example/: __init__.py  api_client.py  api_models.py  server.py
src/mcp_todoist/: SKILL.md  __init__.py  api_client.py  api_models.py  server.py
tests/: __init__.py  test_api_models.py  test_server.py
